workspace = { members = ["example"] }

[package]
name = "pros-command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.3"
pros = { version = "0.3.0", path = "../pros-rs/pros" }
snafu = { version = "0.7.5", default-features = false, features = [
    "unstable-core-error",
] }
